--- a/src/app/UI/client/components/expandable_card/theme.scss
+++ b/src/app/UI/client/components/expandable_card/theme.scss
@@ -5,6 +5,7 @@
 
 .expandableCard {
     position: relative;
+    overflow: visible;
 
     .expandButton {
         position: absolute;
@@ -17,7 +18,7 @@
 
 .expandableCardClickable {
     cursor: pointer;
-    
+
     &:hover {
         box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                     0 3px 14px 2px rgba(0, 0, 0, 0.12),
